[tool.poetry]
name = "quantitative-finance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pybind11 = "^2.11.1"
cvxpy = "^1.4.1"
riskfolio-lib = "^4.4.2"
yfinance = "^0.2.33"
seaborn = "^0.13.0"
streamlit = "^1.29.0"
jupyter = "^1.0.0"
sqlalchemy = "^2.0.24"
alpha-vantage = "^2.3.1"
polars = "^0.20.2"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
